--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "*.ts": "yarn run lint:fix"
   },
   "dependencies": {
-    "@ethereumjs/tx": "^3.5.0",
+    "@ethereumjs/tx": "^5.0.0",
     "@ledgerhq/hw-app-eth": "6.26.1",
     "@ledgerhq/hw-transport": "6.24.1",
+    "@metamask/eth-sig-util": "^7.0.0",
     "buffer": "^6.0.3",
-    "eth-sig-util": "^3.0.1",
-    "ethereumjs-util": "^7.1.4"
+    "ethereumjs-util": "^7.1.5"
   }
 }
