--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "prettier": "^2.6.0",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "tsc": "^2.0.4"
   },
   "lint-staged": {
     "*.ts": "yarn run lint:fix"
