--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
       - uses: actions/setup-node@main
+        name: Setup node with version ${{ env.NODE_VERSION }}
         with:
           node-version: ${{ env.NODE_VERSION }}
       - uses: actions/cache@v2
@@ -30,6 +31,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
       - uses: actions/setup-node@main
+        name: Setup node with version ${{ env.NODE_VERSION }}
         with:
           node-version: ${{ env.NODE_VERSION }}
       - uses: actions/cache@v2
@@ -50,6 +52,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
       - uses: actions/setup-node@main
+        name: Setup node with version ${{ env.NODE_VERSION }}
         with:
           node-version: ${{ env.NODE_VERSION }}
       - uses: actions/cache@v2
@@ -68,6 +71,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
       - uses: actions/setup-node@main
+        name: Setup node with version ${{ env.NODE_VERSION }}
         with:
           node-version: ${{ env.NODE_VERSION }}
       - uses: actions/cache@v2
