--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,9 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
       - uses: actions/setup-node@main
-        name: Setup node with version ${{ env.NODE_VERSION }}
+        name: Setup node with version ${{ vars.NODE_VERSION }}
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ vars.NODE_VERSION }}
       - uses: actions/cache@v2
         id: cache
         with:
@@ -31,9 +31,9 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
       - uses: actions/setup-node@main
-        name: Setup node with version ${{ env.NODE_VERSION }}
+        name: Setup node with version ${{ vars.NODE_VERSION }}
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ vars.NODE_VERSION }}
       - uses: actions/cache@v2
         with:
           path: "**/node_modules"
@@ -52,9 +52,9 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
       - uses: actions/setup-node@main
-        name: Setup node with version ${{ env.NODE_VERSION }}
+        name: Setup node with version ${{ vars.NODE_VERSION }}
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ vars.NODE_VERSION }}
       - uses: actions/cache@v2
         with:
           path: "**/node_modules"
@@ -71,9 +71,9 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           repository: ${{github.event.pull_request.head.repo.full_name}}
       - uses: actions/setup-node@main
-        name: Setup node with version ${{ env.NODE_VERSION }}
+        name: Setup node with version ${{ vars.NODE_VERSION }}
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ vars.NODE_VERSION }}
       - uses: actions/cache@v2
         with:
           path: "**/node_modules"
