--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -7,6 +7,7 @@ on:
         required: true
   release:
     types: [published]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,8 +15,9 @@ jobs:
       - uses: actions/checkout@v4
       # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v3
+        name: Setup Node.js with version ${{ vars.NODE_VERSION }}
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: ${{ vars.NODE_VERSION }}
           registry-url: "https://registry.npmjs.org"
           # Defaults to the user or organization that owns the workflow file
           scope: "@consensys"
