--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -35,7 +35,7 @@ jobs:
             yarn publish --access public --new-version ${{ github.event.inputs.version }} --tag preview
           else
             echo "This is proper release, will publish stable version"
-            yarn publish --access public --tag stable
+            yarn publish --access public --tag latest
           fi
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
