--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@consensys/ledgerhq-metamask-keyring",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A Metamask keyring implementation to bridge wallet operatations with Ledger Nano devices.",
   "repository": "git@github.com:Consensys/ledgerhq-metamask-keyring.git",
   "license": "Apache-2.0",
@@ -36,16 +36,20 @@
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
     "tsc": "^2.0.4",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "axios":"^1.6.1"
   },
   "lint-staged": {
     "*.ts": "yarn run lint:fix"
   },
   "dependencies": {
     "@ethereumjs/tx": "^3.5.0",
-    "@ledgerhq/hw-app-eth": "6.26.1",
+    "@ledgerhq/hw-app-eth": "^6.34.9",
     "@metamask/eth-sig-util": "^7.0.0",
     "buffer": "^6.0.3",
     "ethereumjs-util": "^7.1.5"
+  },
+  "resolutions": {
+    "axios": "^1.6.1"
   }
 }
