--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,8 @@ jobs:
         run: yarn format:check
       - name: lint check
         run: yarn lint:check
+      - name: audit check
+        run: yarn audit
 
   test:
     needs: setup
