--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
-    "typescript": "^5.2.0",
+    "typescript": "5.1.6",
     "axios": "1.6.7"
   },
   "lint-staged": {
